# snail-rs

./: .env  Cargo.toml  Dockerfile  basic.conf  configuration.yaml  fly.toml  script.py
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230215230200_create_subscriptions_table.sql  20230305110738_make_status_not_null_in_subscriptions.sql
scripts/: clear_test_dbs.sh  init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
